[gd_scene load_steps=12 format=3 uid="uid://dydu3jcxqx1i7"]

[ext_resource type="Script" path="res://Enemies/demon.gd" id="1_4sbfe"]
[ext_resource type="Texture2D" uid="uid://bbgi46wehl2x0" path="res://boss_demon_slime_FREE_v1.0./boss_demon_slime_FREE_v1.0/spritesheets/demon_slime_FREE_v1.0_288x160_spritesheet.png" id="1_h7hkt"]

[sub_resource type="Animation" id="Animation_xbcrh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_w84n2"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attacking"
}]
}

[sub_resource type="Animation" id="Animation_k1mcu"]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_2ipsj"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_3sng8"]
resource_name = "spawn"
length = 2.2
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109]
}

[sub_resource type="Animation" id="Animation_htnxw"]
resource_name = "walk"
length = 0.9
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ierkk"]
_data = {
"RESET": SubResource("Animation_xbcrh"),
"attack": SubResource("Animation_w84n2"),
"die": SubResource("Animation_k1mcu"),
"hit": SubResource("Animation_2ipsj"),
"spawn": SubResource("Animation_3sng8"),
"walk": SubResource("Animation_htnxw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p2r74"]
radius = 40.6
height = 158.4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8gx7f"]
radius = 25.6
height = 98.0

[node name="Demon" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(-1, 1)
collision_layer = 32
collision_mask = 47
script = ExtResource("1_4sbfe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h7hkt")
hframes = 22
vframes = 5
frame = 22

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ierkk")
}

[node name="Range" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(40.6, 45.2)
shape = SubResource("CapsuleShape2D_p2r74")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, 39.6)
shape = SubResource("CapsuleShape2D_8gx7f")

[node name="HitTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
